--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
         "dev": "vite"
     },
     "dependencies": {
-        "autoprefixer": "^10.4.21",
+        "@tailwindcss/vite": "^4.0.7",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.3.0",
-        "preline": "^3.2.3",
-        "tailwindcss": "^3.4.17",
-        "vite": "^5.4.19"
+        "laravel-vite-plugin": "^1.0",
+        "preline": "^3.0.1",
+        "tailwindcss": "^4.0.7",
+        "vite": "^6.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
